backport to java 8, linux support, eclipse stuff